# Bootcamp_Web_Scraping

./: .gitignore  .pre-commit-config.yaml  PRCHECKLIST  README.md  pyproject.toml
.github/workflows/: pr_agent.yml
.komment/: .gitkeep
SRC/: playscores_api.py
